--- a/bikes/pyproject.toml
+++ b/bikes/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.4",
     "tqdm>=4.67.1",
 ]
