--- a/bikes/pyproject.toml
+++ b/bikes/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "prophet>=1.1.6",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
     "tqdm>=4.67.1",
