--- a/bikes/pyproject.toml
+++ b/bikes/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "prophet>=1.1.6",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
+    "torch>=2.6.0",
     "tqdm>=4.67.1",
 ]
