--- a/bikes/pyproject.toml
+++ b/bikes/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
