--- a/bikes/pyproject.toml
+++ b/bikes/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "prophet>=1.1.6",
+    "pyarrow>=20.0.0",
     "pydantic>=2.11.4",
     "ruptures>=1.1.9",
     "seaborn>=0.13.2",
